# idvom

catalog/: Dockerfile  README.md  pyproject.toml
catalog/app/: db.py  main.py  models.py  schemas.py
gateway/: Dockerfile  README.md  go.mod  main.go
helm/: Chart.yaml  kustomization.yaml  values.yaml
helm/catalog/: kustomization.yaml
helm/gateway/: configmap.yaml  deployment.yaml  service.yaml
helm/templates/: postgres-cluster.yaml
helm/templates/catalog/: configmap.yaml  deployment.yaml  service.yaml
helm/templates/gateway/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
helm/templates/orders/: configmap.yaml  deployment.yaml  service.yaml
orders/: Dockerfile  README.md  pyproject.toml
orders/app/: db.py  main.py  models.py  schemas.py
